--- a/GameEditor/Base.lproj/ValueEditors.xib
+++ b/GameEditor/Base.lproj/ValueEditors.xib
@@ -936,7 +936,7 @@
                         <rect key="frame" x="1" y="17" width="238" height="117"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView verticalHuggingPriority="750" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" multipleSelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="15" rowSizeStyle="automatic" headerView="Fff-k5-gKu" viewBased="YES" floatsGroupRows="NO" id="9M9-I0-tB9" customClass="UserDataTableView">
+                            <tableView verticalHuggingPriority="750" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="15" rowSizeStyle="automatic" headerView="Fff-k5-gKu" viewBased="YES" floatsGroupRows="NO" id="9M9-I0-tB9" customClass="UserDataTableView">
                                 <rect key="frame" x="0.0" y="0.0" width="284" height="0.0"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
@@ -961,11 +961,11 @@
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="MiA-xy-Moc">
-                                                        <rect key="frame" x="1" y="-1" width="102" height="15"/>
+                                                        <rect key="frame" x="1" y="0.0" width="102" height="14"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="15" id="Ael-yA-W8E"/>
+                                                            <constraint firstAttribute="height" constant="14" id="Ael-yA-W8E"/>
                                                         </constraints>
-                                                        <textFieldCell key="cell" controlSize="small" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="Lrz-hm-b25">
+                                                        <textFieldCell key="cell" controlSize="small" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" id="Lrz-hm-b25">
                                                             <font key="font" metaFont="smallSystem"/>
                                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -1014,7 +1014,7 @@
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="14" id="QAY-NJ-lI4"/>
                                                         </constraints>
-                                                        <popUpButtonCell key="cell" type="bevel" title="Nil" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="truncatingTail" state="on" tag="10" imageScaling="proportionallyDown" inset="2" selectedItem="wtA-iF-byT" id="9Qx-TV-hYJ">
+                                                        <popUpButtonCell key="cell" type="bevel" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="truncatingTail" state="on" tag="10" imageScaling="proportionallyDown" inset="2" selectedItem="wtA-iF-byT" id="9Qx-TV-hYJ">
                                                             <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                                                             <font key="font" metaFont="smallSystem"/>
                                                             <menu key="menu" id="ZKw-3z-nJB">
@@ -1043,7 +1043,7 @@
                                                                     <menuItem title="Image" tag="9" id="CG8-Wi-rMG">
                                                                         <modifierMask key="keyEquivalentModifierMask"/>
                                                                     </menuItem>
-                                                                    <menuItem title="Nil" state="on" tag="10" id="wtA-iF-byT">
+                                                                    <menuItem state="on" tag="10" id="wtA-iF-byT">
                                                                         <modifierMask key="keyEquivalentModifierMask"/>
                                                                     </menuItem>
                                                                 </items>
@@ -1084,18 +1084,18 @@
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <tabView drawsBackground="NO" allowsTruncatedLabels="NO" type="noTabsNoBorder" initialItem="CQr-a3-zrl" translatesAutoresizingMaskIntoConstraints="NO" id="hOh-ph-zoG">
-                                                        <rect key="frame" x="0.0" y="0.0" width="101" height="15"/>
+                                                        <rect key="frame" x="0.0" y="1" width="101" height="14"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="15" id="dNX-gf-zht"/>
+                                                            <constraint firstAttribute="height" constant="14" id="dNX-gf-zht"/>
                                                         </constraints>
                                                         <tabViewItems>
                                                             <tabViewItem label="Boolean" identifier="1" id="CQr-a3-zrl" userLabel="(0) Boolean">
                                                                 <view key="view" id="Nxg-hM-L36">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="101" height="15"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="101" height="14"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                     <subviews>
                                                                         <button translatesAutoresizingMaskIntoConstraints="NO" id="UuL-ec-qDT">
-                                                                            <rect key="frame" x="-1" y="-2" width="18" height="18"/>
+                                                                            <rect key="frame" x="-1" y="-3" width="18" height="18"/>
                                                                             <buttonCell key="cell" type="check" bezelStyle="regularSquare" imagePosition="overlaps" controlSize="small" state="on" inset="2" id="Ljq-5F-1se">
                                                                                 <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                                                                 <font key="font" metaFont="smallSystem"/>
